# conan-petsc

./: .gitignore  Jenkinsfile  build.py  conanfile.py
test/: CMakeLists.txt  conanfile.py  main.cpp
